# PasswordManager

./: .clang-format  .gitignore  CMakeLists.txt  README.md
docs/: Doxyfile
docs/html/: _bot_handler_8cpp.html  _bot_handler_8h.html  _bot_handler_8h.js  _bot_handler_8h_source.html  _crypto_engine_8cpp.html  _crypto_engine_8h.html  _crypto_engine_8h.js  _crypto_engine_8h_source.html  _database_8cpp.html  _database_8h.html  _database_8h_source.html  _exceptions_8h.html  _exceptions_8h.js  _exceptions_8h_source.html  _session_manager_8cpp.html  _session_manager_8h.html  _session_manager_8h.js  _session_manager_8h_source.html  annotated.html  annotated_dup.js  class_app_exception-members.html  class_app_exception.html  class_app_exception.js  class_bot_handler-members.html  class_bot_handler.html  class_bot_handler.js  class_config_exception-members.html  class_config_exception.html  class_config_exception.js  class_crypto_engine-members.html  class_crypto_engine.html  class_crypto_engine.js  class_crypto_exception-members.html  class_crypto_exception.html  class_crypto_exception.js  class_database-members.html  class_database.html  class_database.js  class_database_exception-members.html  class_database_exception.html  (+60 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  files_0.js  files_1.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_8.js  functions_9.js  functions_c.js  functions_d.js  functions_e.js  functions_f.js  searchdata.js  (+8 more)
src/: main.cpp
src/bot/: BotHandler.cpp  BotHandler.h
src/common/: Exceptions.h
src/crypto/: CryptoEngine.cpp  CryptoEngine.h
src/session/: SessionManager.cpp  SessionManager.h
src/storage/: Database.cpp  Database.h
tests/: test_crypto.cpp  test_database.cpp  test_main.cpp  test_session.cpp
